--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,9 @@
   "license": "ISC",
   "dependencies": {
     "async-mqtt": "^2.5.0",
+    "chai": "^4.2.0",
+    "mocha": "^7.1.0",
+    "sinon": "^9.0.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
